# SafeAgentFramework

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  review.json  review.md  review2.json
.github/: pr_body.json
.github/workflows/: ci.yml  claude-agent.yml
design/: architecture.md
scripts/: check_license_headers.py
src/safe_agent/: __init__.py
src/safe_agent/access/: __init__.py  evaluator.py  models.py  policy.py
src/safe_agent/core/: __init__.py  agent.py  audit.py  dispatcher.py  event_loop.py  gateway.py  llm.py  session.py
src/safe_agent/iam/: __init__.py  evaluator.py  models.py  policy.py
src/safe_agent/modules/: __init__.py  alerting.py  audit.py  base.py  calendar.py  dashboard.py  database.py  email.py  error_tracking.py  filesystem.py  git.py  logging.py  registry.py  remote_ssh.py  scm.py  shell.py  web_api.py  web_browse.py  web_search.py
src/safe_agent/modules/coding/: __init__.py
src/safe_agent/modules/communication/: __init__.py  messaging.py
src/safe_agent/modules/filesystem/: __init__.py
src/safe_agent/modules/observability/: alerting.py  dashboard.py  logging.py  metrics.py
src/safe_agent/modules/security/: __init__.py  vault.py
src/safe_agent/modules/web/: __init__.py  browse.py
tests/: __init__.py
tests/test_access/: __init__.py  test_evaluator.py  test_models.py  test_policy.py
tests/test_core/: __init__.py  test_agent.py  test_audit.py  test_dispatcher.py  test_event_loop.py  test_event_loop_max_messages.py  test_gateway.py  test_llm.py  test_session.py
tests/test_iam/: __init__.py  test_evaluator.py  test_models.py  test_policy.py
tests/test_integration/: __init__.py  test_end_to_end.py
tests/test_modules/: __init__.py  test_alerting.py  test_audit.py  test_base.py  test_calendar.py  test_dashboard.py  test_database.py  test_email.py  test_error_tracking.py  test_filesystem.py  test_git.py  test_logging.py  test_messaging.py  test_registry.py  test_remote_ssh.py  test_shell.py  test_vault.py  test_web_api.py  test_web_browse.py  test_web_search.py
